--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 		<version>3.0.0-SNAPSHOT</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.seerbit</groupId>
-	<artifactId>transaction-stats</artifactId>
+	<groupId>com.gbeminiyi</groupId>
+	<artifactId>transaction-statistics</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>transaction-stats</name>
-	<description>A RESTFUL API for transaction stats</description>
+	<name>transaction-statistics</name>
+	<description>A RESTFUL API for seerbit transaction statistics</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,6 +55,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
